plugins/xpath/xpath-lang/testData/xpath2/highlighting/types/quantifiedExprCondition.xpath2
some $i in 1 to 3 satisfies <error descr="Expected type 'xs:boolean', got 'xs:date'">current-date()</error>